fix(deps): add lmfit to gui dependencies
PeakTracker module uses lmfit for peak fitting. Add lmfit>=1.2.0
to gui optional dependencies until migration to nlsq is complete.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ dev = [
 ]
 gui = [
     "PyQt6>=6.6.0",
+    # PeakTracker uses lmfit for peak fitting (pending migration to nlsq)
+    "lmfit>=1.2.0",
 ]
 hardware = [
     # NI DAQ for temperature sensor
