refactor(core): migrate from jaxopt to optimistix
Replace deprecated jaxopt.LevenbergMarquardt with optimistix for
long-term maintainability. Update solver invocation pattern from
solver.run() to optx.least_squares() with proper residual signatures.

- Update residual functions to accept (x, args) signature
- Change result access from result.params to result.value
- Add 11 parity tests verifying numerical equivalence

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ dependencies = [
     # GPU users: see installation instructions above
     "jax==0.8.0",     # JAX 0.8.0 CPU-only - exact version required
     "jaxlib==0.8.0",  # jaxlib 0.8.0 CPU-only - must match JAX version exactly
-    "jaxopt",
+    "optimistix>=0.0.6",  # JAX-native optimization (replaces deprecated jaxopt)
 
     # Curve fitting (replaces lmfit)
     "nlsq>=0.4.1",
