--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ dependencies = [
 dev = [
     "pytest>=8.0.0",
     "pytest-cov>=5.0.0",
+    "pytest-qt>=4.4.0",
     "pytest-xdist>=3.5.0",
     "hypothesis>=6.100.0",
     "black>=24.0.0",
