docs: reorganize docs folder

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ __pypackages__/
 # ----------------------------------------------------------------------------
 # Sphinx build artifacts
 docs/_build/
+docs/legacy/
 docs/build/
 doc/build/
 .doctrees/
