test: suppress upstream deprecation warnings
Add pytest filterwarnings and conftest warning filters for known
upstream issues: xla_pmap_p deprecation from NumPyro, R-hat/ESS
diagnostic warnings, and SciPy peak prominence warnings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -178,6 +178,12 @@ markers = [
 filterwarnings = [
     "ignore:FigureCanvasAgg is non-interactive:UserWarning",
     "ignore:More than 20 figures have been opened:RuntimeWarning",
+    "ignore:.*xla_pmap_p is deprecated.*:DeprecationWarning",
+    "ignore:Some R-hat values .*:UserWarning",
+    "ignore:Some ESS values .*:UserWarning",
+    "ignore:Failed to generate energy plot.*:UserWarning",
+    "ignore:Low sample size .*:UserWarning",
+    "ignore:some peaks have a prominence of 0:Warning:scipy\\.signal\\._peak_finding",
 ]
 
 [tool.black]
