--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,20 @@
-sphinx>=7.2
-myst-parser>=2.0
+# Documentation build requirements for RheoQCM
+# Install with: pip install -r docs/requirements.txt
+
+# Sphinx core
+sphinx>=8.0
+
+# Markdown support (MyST parser)
+myst-parser>=4.0
+
+# Bibliography support
 sphinxcontrib-bibtex>=2.6
+
+# Required for MyST linkify extension
 linkify-it-py>=2.0
--e .
+
+# Optional: live-reload development server
+sphinx-autobuild>=2024.0
+
+# Install RheoQCM package (for autodoc)
+-e ..
